--- a/tecolotl-web/src/main/webapp/administracion/catalogo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/catalogo.xhtml
@@ -18,8 +18,8 @@
         <div id="content" data-uk-height-viewport="expand: true">
             <div class="uk-section uk-section-medium">
                 <div class="uk-container uk-container-expand">
-                    <div class="uk-child-width-1-1@s uk-child-width-1-2@m uk-child-width-1-3@l" uk-grid="">
-                        <div>
+                    <div class="" uk-grid="">
+                        <div class="uk-width-1-2">
                             <div uk-grid="">
                                 <div class="uk-width-auto"><span uk-icon="icon: ban; ratio: 2"></span></div>
                                 <div class="uk-width-expand">
@@ -74,16 +74,39 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="uk-width-1-2">
                             <div uk-grid="">
                                 <div class="uk-width-auto"><h:graphicImage library="img" name="mapa.svg" pt:uk-svg="" width="40" height="40"/></div>
                                 <div class="uk-width-expand">
-                                    <h3 class="uk-text-uppercase uk-text-truncate">TITLE</h3>
-                                    <p class="uk-text-justify">Monsoon ipsum sine eta consectetur adipiscing elit.</p>
+                                    <h3 class="uk-text-uppercase uk-text-truncate">COLONIAS</h3>
+                                    <h:panelGroup rendered="#{empty catalogoControlador.codigoPostales}">
+                                        <table class="uk-table uk-table-middle uk-table-hover uk-table-striped">
+                                            <thead class="limite">
+                                              <tr class="uk-border-rounded">
+                                                  <th class="uk-background-primary uk-dark">#{mensaje['catalog.zipcode']}</th>
+                                                  <th class="uk-background-primary uk-dark">#{mensaje['catalog.name']}</th>
+                                                  <th class="uk-background-primary uk-dark">#{mensaje['catalog.town']}</th>
+                                                  <th class="uk-background-primary uk-dark">#{mensaje['catalog.state']}</th>
+                                                  <th class="uk-background-primary uk-dark">#{mensaje['label.option']}</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td colspan="5" align="center" ><h:graphicImage library="img" name="vacio.svg" height="385px" width="385px"/></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                        <div class="uk-flex uk-flex-right">
+                                            <button class="uk-button uk-button-primary uk-margin-small uk-border-rounded" uk-toggle="target: #modal-motivos-bloqueo">
+                                                <h:outputText value="#{mensaje['button.add']}" styleClass="uk-margin-small-right"/>
+                                                <span uk-icon="icon: plus-circle; ratio: 1"></span>
+                                            </button>
+                                        </div>
+                                    </h:panelGroup>
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="uk-width-1-2">
                             <div uk-grid="">
                                 <div class="uk-width-auto"><span uk-icon="icon:uikit;ratio:2"></span></div>
                                 <div class="uk-width-expand">
@@ -92,7 +115,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
+                        <div class="uk-width-1-2">
                             <div uk-grid="">
                                 <div class="uk-width-auto"><span uk-icon="icon:heart;ratio:2"></span></div>
                                 <div class="uk-width-expand">
