--- a/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/detalle-escuela.xhtml
@@ -212,13 +212,27 @@
 								<button class="uk-modal-close-default" type="button" uk-close=""></button>
 								<div class="uk-modal-header">
 									<h2 class="uk-modal-title uk-text-center">#{mensaje['school-details.new']}</h2>
+
 								</div>
 								<div class="uk-modal-body">
-									<h:form >
+									<h:form  styleClass="uk-form-stacked">
 
 										<div class="uk-grid-small" uk-grid="">
 											<div class="uk-width-1-3@s">
 												<h:outputLabel styleClass="uk-text-capitalize uk-form-label" value="#{mensaje['school.cct']}" for="input-cct" />
+
+                                                    <div class="uk-form-controls">
+                                                        <h:inputText styleClass="uk-input"
+																	>
+
+
+														</h:inputText>
+
+                                                    </div>
+
+
+
+
 											</div>
 											<div class="uk-width-1-3@s">
 												<input class="uk-input" type="text" placeholder="25"/>
