--- a/tecolotl-web/src/main/webapp/administracion/catalogo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/catalogo.xhtml
@@ -29,8 +29,9 @@
                                                  id="tabla-motivo-bloqueo"
                                                  styleClass="uk-table uk-table-hover uk-table-divider limite-tabla-motivo-bloqueo uk-table-middle"
                                                  headerClass="uk-background-primary uk-dark"
-                                                 footerClass="uk-background-primary uk-dark uk-flex uk-text-right"
-                                                 first="0" rows="5">
+                                                 footerClass="uk-background-primary"
+                                                 first="#{catalogoControlador.primera}"
+                                                 rows="#{catalogoControlador.paginacion}">
                                         <h:column>
                                             <f:facet name="header"><h:outputText value="#{mensaje['catalog.description']}" styleClass="uk-text-capitalize"/></f:facet>
                                             <h:outputText value="#{motivo.descripcion}"/>
@@ -54,18 +55,23 @@
                                                 </div>
                                             </div>
                                         </h:column>
-                                        <f:facet name="footer">
-                                            <ul class="uk-pagination" uk-margin="">
+                                    </h:dataTable>
+                                    <div class="uk-flex uk-flex-right">
+                                        <h:form id="formulario-paginacion">
+                                            <ul class="uk-pagination uk-background-primary uk-padding-small uk-margin-small-right uk-border-rounded">
                                                 <li><a href="#"><span uk-pagination-previous=""></span></a></li>
                                                 <li><a href="#">1</a></li>
                                                 <li><a href="#">4</a></li>
                                                 <li><a href="#">5</a></li>
                                                 <li><a href="#">6</a></li>
-                                                <li><a href="#"><span uk-pagination-next=""></span></a></li>
+                                                <li>
+                                                    <h:commandLink>
+                                                        <span uk-pagination-next=""></span>
+                                                        <f:ajax listener="#{catalogoControlador.siguiente}" render="tabla-motivo-bloqueo"/>
+                                                    </h:commandLink>
+                                                </li>
                                             </ul>
-                                        </f:facet>
-                                    </h:dataTable>
-                                    <div class="uk-flex uk-flex-right">
+                                        </h:form>
                                         <button class="uk-button uk-button-primary uk-margin-small uk-border-rounded" uk-toggle="target: #modal-motivos-bloqueo">
                                             <h:outputText value="#{mensaje['button.add']}" styleClass="uk-margin-small-right"/>
                                             <span uk-icon="icon: plus-circle; ratio: 1"></span>
