--- a/tecolotl-web/src/main/webapp/administracion/catalogo.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/catalogo.xhtml
@@ -82,10 +82,38 @@
                         </div>
                         <div class="uk-width-1-2">
                             <div uk-grid="">
-                                <div class="uk-width-auto"><span uk-icon="icon:uikit;ratio:2"></span></div>
+                                <div class="uk-width-auto"><span uk-icon="icon: users; ratio: 2"></span></div>
                                 <div class="uk-width-expand">
-                                    <h3 class="uk-text-uppercase uk-text-truncate">Css grid</h3>
-
+                                    <h3 class="uk-text-uppercase uk-text-truncate">#{mensaje['catalog.typescontacts']}</h3>
+                                    <h:dataTable value="#{catalogoControlador.tipoContactos}"
+                                                 var="contactos"
+                                                 id="tabla-tipos-contactos"
+                                                 styleClass="uk-table uk-table-hover uk-table-divider limite-tabla-tipos-contactos uk-table-middle"
+                                                 headerClass="uk-background-primary uk-dark"
+                                                 footerClass="uk-background-primary">
+                                        <h:column>
+                                            <f:facet name="header" ><h:outputText value="#{mensaje['catalog.description']}" styleClass="uk-text-capitalize"/></f:facet>
+                                            <h:outputText value="#{motivo.descripcion}"/>
+                                        </h:column>
+                                        <h:column headerClass="uk-background-primary uk-dark uk-table-shrink uk-text-center">
+                                            <f:facet name="header"><h:outputText value="#{mensaje['label.option']}" styleClass="uk-text-capitalize"/></f:facet>
+                                            <div class="uk-inline">
+                                                <button class="uk-icon-button puntero" uk-icon="more-vertical" type="button"/>
+                                                <div uk-dropdown="boundary:.limite-tabla-tipos-contactos; mode: click">
+                                                    <ul class="uk-nav uk-dropdown-nav">
+                                                        <li>
+                                                            <h:form id="formulario-aditar">
+                                                                <h:commandLink styleClass="uk-link-muted">
+                                                                    <span uk-icon="icon: file-edit" class="uk-margin-small-right uk-icon" ></span>
+                                                                    <span class="uk-text-middle"><h:outputText value="#{mensaje['button.edit']}"/></span>
+                                                                </h:commandLink>
+                                                            </h:form>
+                                                        </li>
+                                                    </ul>
+                                                </div>
+                                            </div>
+                                        </h:column>
+                                    </h:dataTable>
                                 </div>
                             </div>
                         </div>
